samples/_failures_safe/1761497057_e0fad7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68c35922.c: In function ‘main’:
./samples/SAFE/__tmp_68c35922.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("%d. Exit\n", num_operations + 1);
      |         ^~~~~~
./samples/SAFE/__tmp_68c35922.c:155:9: error: expected declaration or statement at end of input
